{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 47,
  "lineage": "9dbe463f-9eff-93fa-261d-fa5d44467c38",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:security-group/sg-0a7711491f20a9d29",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a7711491f20a9d29",
            "ingress": [],
            "name": "smp-eks-cluster-cluster-20260512183631404700000009",
            "name_prefix": "smp-eks-cluster-cluster-",
            "owner_id": "919664459382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "smp-eks-cluster-cluster",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "smp-eks-cluster-cluster",
              "Project": "scalable-microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:security-group/sg-09b6c35713bd23d18",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09b6c35713bd23d18",
            "ingress": [],
            "name": "smp-eks-cluster-node-2026051218363140550000000a",
            "name_prefix": "smp-eks-cluster-node-",
            "owner_id": "919664459382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "smp-eks-cluster-node",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/cluster/smp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "smp-eks-cluster-node",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/cluster/smp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2009895309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7711491f20a9d29",
            "security_group_rule_id": "sgr-0805a549cf19be639",
            "self": false,
            "source_security_group_id": "sg-09b6c35713bd23d18",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2978677234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0e695b559a195030d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-482314539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0de4628de028381cf",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1954804873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0e929e9e5f376a59f",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3183579935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0b379b8ae3b943480",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2929569598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0b2cac267e901a807",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3392969973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0d2cceb18a3278697",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2103482577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-08a19f5bf664231f3",
            "self": false,
            "source_security_group_id": "sg-0a7711491f20a9d29",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3242406834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0d64fc997b53b7665",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2038997261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-0de4f0ec6eae8f7d5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3721855714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09b6c35713bd23d18",
            "security_group_rule_id": "sgr-05e9002afe30cb6ff",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:network-acl/acl-05e1ccdcefbd8744a",
            "default_network_acl_id": "acl-05e1ccdcefbd8744a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05e1ccdcefbd8744a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "919664459382",
            "subnet_ids": [
              "subnet-016630216113127dd",
              "subnet-02069353e92e4da2b",
              "subnet-09a4ef1eb1979abfe",
              "subnet-0d5163c4433ee9260"
            ],
            "tags": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:route-table/rtb-08244dfab07945c4d",
            "default_route_table_id": "rtb-08244dfab07945c4d",
            "id": "rtb-08244dfab07945c4d",
            "owner_id": "919664459382",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:security-group/sg-017696c42ca7bd5a8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-017696c42ca7bd5a8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "919664459382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-default",
              "Project": "scalable-microservices-platform"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:internet-gateway/igw-0ccf73a10075309e5",
            "id": "igw-0ccf73a10075309e5",
            "owner_id": "919664459382",
            "tags": {
              "Name": "scalable-microservices-platform-vpc",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc",
              "Project": "scalable-microservices-platform"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ccf73a10075309e5",
            "id": "r-rtb-0d154469fb568c6991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d154469fb568c699",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:route-table/rtb-0f5a1e989c2d52278",
            "id": "rtb-0f5a1e989c2d52278",
            "owner_id": "919664459382",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scalable-microservices-platform-vpc-private",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-private",
              "Project": "scalable-microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:route-table/rtb-0d154469fb568c699",
            "id": "rtb-0d154469fb568c699",
            "owner_id": "919664459382",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scalable-microservices-platform-vpc-public",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-public",
              "Project": "scalable-microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00464a04ced432e2b",
            "route_table_id": "rtb-0f5a1e989c2d52278",
            "subnet_id": "subnet-09a4ef1eb1979abfe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8c821151628a95f",
            "route_table_id": "rtb-0f5a1e989c2d52278",
            "subnet_id": "subnet-02069353e92e4da2b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd283ba0b517af3a",
            "route_table_id": "rtb-0d154469fb568c699",
            "subnet_id": "subnet-016630216113127dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe586eaf35d27aa",
            "route_table_id": "rtb-0d154469fb568c699",
            "subnet_id": "subnet-0d5163c4433ee9260"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:subnet/subnet-09a4ef1eb1979abfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4ef1eb1979abfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919664459382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalable-microservices-platform-vpc-private-ap-southeast-1a",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-private-ap-southeast-1a",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:subnet/subnet-02069353e92e4da2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02069353e92e4da2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919664459382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalable-microservices-platform-vpc-private-ap-southeast-1b",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-private-ap-southeast-1b",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:subnet/subnet-016630216113127dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016630216113127dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919664459382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalable-microservices-platform-vpc-public-ap-southeast-1a",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-public-ap-southeast-1a",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:subnet/subnet-0d5163c4433ee9260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5163c4433ee9260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919664459382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalable-microservices-platform-vpc-public-ap-southeast-1b",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc-public-ap-southeast-1b",
              "Project": "scalable-microservices-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-010fa01fd268189cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:919664459382:vpc/vpc-010fa01fd268189cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e1ccdcefbd8744a",
            "default_route_table_id": "rtb-08244dfab07945c4d",
            "default_security_group_id": "sg-017696c42ca7bd5a8",
            "dhcp_options_id": "dopt-02948159584058129",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010fa01fd268189cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08244dfab07945c4d",
            "owner_id": "919664459382",
            "tags": {
              "Name": "scalable-microservices-platform-vpc",
              "Project": "scalable-microservices-platform"
            },
            "tags_all": {
              "Name": "scalable-microservices-platform-vpc",
              "Project": "scalable-microservices-platform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}